...
        }

        let references = [
            ReferenceDefinition(
                id: UUID(uuidString: "93F08C01-6795-46B0-B092-7F9C17CE5A01")!,
                filename: "DaB3eJ3gAcv_1.mp4",
                title: "Reference swing 1",
                duration: 14.626
            ),
            ReferenceDefinition(
                id: UUID(uuidString: "93F08C01-6795-46B0-B092-7F9C17CE5A02")!,
                filename: "DaBMIbhpel9_1.mp4",
                title: "Reference swing 2",
...
